# Stars

./: .gitignore  .gitmodules  README.md  build.sh  meson.build
includes/: arguments.h  colors.h  configuration.h  fixed.h  global-includes.h  modes.h  queue.h  render.h  stars-macros.h  utilities.h
src/: arguments.c  colors.c  configuration.c  meson.build  modes.c  queue.c  render.c  stars.c  utilities.c
